[tool.poetry]
name = "ridar"
version = "0.1.0"
description = ""
authors = ["ulysseyson <ulysseyson57@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.26.4"
matplotlib = "^3.9.2"
open3d = "^0.18.0"
scikit-learn = "^1.5.2"
pyyaml = "^6.0.2"
addict = "^2.4.0"
pandas = "^2.2.3"
tqdm = "^4.67.1"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
